[pom] Add java.sql to modules for javadocs
due to known issue with maven plugin incorrectly determining modular usage, let it be modular there so the build works.